--- a/Resources/Prototypes/_NF/Shipyard/metastable.yml
+++ b/Resources/Prototypes/_NF/Shipyard/metastable.yml
@@ -6,7 +6,7 @@
 # GitHub: see author
 # Discord: 
 
-# Shuttle Notes: NO venders! Mouse spawner timer increased to 30 minutes, flatpacks must be unpacked for pricing and power testing. Gas miner atmos tiles intentional for recovery from near full spacing. Brig doors not bolting is intended. Disposal route into locked-down cargo is intended unless abused repeatedly. 
+# Shuttle Notes: Mouse spawner timer increased to 30 minutes, flatpacks must be unpacked for pricing and power testing. Gas miner atmos tiles intentional for recovery from near full spacing. Brig doors not bolting is intended. Disposal route into locked-down cargo is intended unless abused repeatedly. 
 # priorities: Enable large crews and factions/fleets in a flagship role, mimic Meta station (SS13 version with xenobio), upgradability/customizability, keep it as small as reasonable for it's purposes. 
 
 #TODO: placeholder armory, placeholder shipyard. start AME? localization strings for camera names?, borg crew slot, guidebook
@@ -18,10 +18,9 @@
   category: Large #1330 tiles
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/metastable.yml
-  guidebookPage: ShipyardMetastable
+  guidebookPage: Null
   class:
   - Science
-  - Engineering
   - Civilian
   engine:
   - AME
