--- a/Resources/Prototypes/_NF/Roles/Ghostroles/whitelisted.yml
+++ b/Resources/Prototypes/_NF/Roles/Ghostroles/whitelisted.yml
@@ -49,11 +49,11 @@
   whitelisted: true
 
 - type: ghostRole
-  id: CatCult
+  id: CatBloodCult
   name: ghost-role-information-cult-cat-name
   description: ghost-role-information-cult-cat-description
   rules:  ghost-role-information-emotional-support-rules
-  entityPrototype: MobCatCult
+  entityPrototype: MobCatBloodCult
   whitelisted: true
 
 - type: ghostRole
