dev_map and bloodmoon

--- a/Resources/Maps/_NF/Bluespace/bloodmoon.yml
+++ b/Resources/Maps/_NF/Bluespace/bloodmoon.yml
@@ -22,6 +22,7 @@ entities:
     components:
     - type: MetaData
     - type: Transform
+      parent: invalid
     - type: MapGrid
       chunks:
         0,0:
@@ -1089,8 +1090,6 @@ entities:
     - type: Transform
       pos: 11.5,-7.5
       parent: 1
-    - type: Physics
-      bodyType: Static
 - proto: BenchSofaRight
   entities:
   - uid: 1079
@@ -1098,8 +1097,6 @@ entities:
     - type: Transform
       pos: 10.5,-7.5
       parent: 1
-    - type: Physics
-      bodyType: Static
 - proto: BloodCollector
   entities:
   - uid: 1137
@@ -6041,6 +6038,13 @@ entities:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 18.5,-11.5
+      parent: 1
+- proto: SpawnMobCatBloodCult
+  entities:
+  - uid: 351
+    components:
+    - type: Transform
+      pos: 17.5,13.5
       parent: 1
 - proto: StructureMeleeWeaponRackBloodCultFilled
   entities:
