--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
@@ -337,19 +337,11 @@
     chance: 0.95
     rarePrototypes:
     - CrateSalvageEquipment
-    - CrateServiceJanitorialSupplies
-    - CrateEmergencyInternals
-    - CrateServiceSmokeables
+#    - CrateServiceJanitorialSupplies
     - CrateTrashCartFilled
-    - CrateServiceReplacementLights
     - CrateServiceBureaucracy
-    - CrateEmergencyFire
-    - CrateEmergencyInflatablewall
-    - CrateHydroponicsTools
-    - CrateHydroponicsSeeds
-    - CrateHydroponicsSeedsMedicinal
-    - CrateHydroponicsSeedsExotic
-    rareChance: 0.1
+    - CrateArtifactContainer
+    rareChance: 0.05
     offset: 0.0
 
 - type: entity
