--- a/Resources/Prototypes/_NF/Entities/World/Debris/wrecks.yml
+++ b/Resources/Prototypes/_NF/Entities/World/Debris/wrecks.yml
@@ -30,6 +30,10 @@
           prob: 3.5
         - id: SalvageSpawnerTreasure
           prob: 0.3
+        - id: SpawnDungeonLootSeed
+          prob: 0.1
+        - id: SpawnDungeonLootToolsHydroponics
+          prob: 0.05
         - id: SalvageSpawnerTreasureValuable
           prob: 0.05
         - id: SalvageSpawnerEquipment
@@ -59,7 +63,7 @@
         - id: SalvageSuitStorageSpawner
           prob: 0.1
         - id: RandomArtifactSpawner
-          prob: 0.03
+          prob: 0.05
         # Medical
         - id: MedicalPodFilled # Medical bounties
           prob: 0.03
