--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
@@ -336,6 +336,8 @@
     - NFCrateSalvageAssortedGoodiesPlastic
     chance: 0.95
     rarePrototypes:
+    - CrateTradeSecureNormalFilled
+    - CrateTradeSecureHighFilled
     - CrateSalvageEquipment
 #    - CrateServiceJanitorialSupplies
     - CrateTrashCartFilled
