--- a/Resources/Prototypes/_NF/Catalog/Fills/Crates/salvage.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Crates/salvage.yml
@@ -307,3 +307,8 @@
   id: NFCrateSalvageAssortedGoodiesPlastic
   categories: [ HideSpawnMenu ]
   parent: [ CratePlastic, NFCrateSalvageAssortedGoodies ]
+
+- type: entity
+  id: NFCrateSalvageAssortedGoodiesTrashCart
+  categories: [ HideSpawnMenu ]
+  parent: [ CrateTrashCart, NFCrateSalvageAssortedGoodies ]
