--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
@@ -333,17 +333,19 @@
   - type: RandomSpawner
     prototypes:
     - NFCrateSalvageAssortedGoodies
+    - NFCrateSalvageAssortedGoodies
+    - NFCrateSalvageAssortedGoodies
     - NFCrateSalvageAssortedGoodiesPlastic
+    - NFCrateSalvageAssortedGoodiesPlastic
+    - NFCrateSalvageAssortedGoodiesTrashCart
     chance: 0.95
     rarePrototypes:
     - CrateTradeSecureNormalFilled
     - CrateTradeSecureHighFilled
     - CrateSalvageEquipment
-#    - CrateServiceJanitorialSupplies
     - CrateTrashCartFilled
-    - CrateServiceBureaucracy
     - CrateArtifactContainer
-    rareChance: 0.05
+    rareChance: 0.03
     offset: 0.0
 
 - type: entity
