--- a/Resources/Prototypes/_NF/Entities/World/Debris/wrecks.yml
+++ b/Resources/Prototypes/_NF/Entities/World/Debris/wrecks.yml
@@ -32,6 +32,8 @@
           prob: 0.3
         - id: SpawnDungeonLootSeed
           prob: 0.1
+        - id: SpawnDungeonLootBureaucracy
+          prob: 0.05
         - id: SpawnDungeonLootToolsHydroponics
           prob: 0.05
         - id: SalvageSpawnerTreasureValuable
