--- a/Resources/Prototypes/_NF/Catalog/Fills/Crates/salvage.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Crates/salvage.yml
@@ -46,11 +46,11 @@
     - id: SheetBrass
       prob: 0.01
     - id: MaterialBananium
-      prob: 0.0001
-    - id: MaterialDiamond
       prob: 0.00001
+    - id: MaterialDiamond
+      prob: 0.0000001
     - id: MaterialBluespace
-      prob: 0.000001
+      prob: 0.00000001 # Yes I mean it
       #  - Service
     - id: CrayonBox
       prob: 0.001
