--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
@@ -426,13 +426,9 @@
     - Table
     - Rack
 #    - Dresser # WardrobeMixedFilled
-    - WardrobeMixedFilled
-#    - Bookshelf # BookshelfFilled
+    - NFWardrobeMixedFilled
     - BookshelfFilled
     - Bed
-    - SuitStorageSalv
-    - Floodlight
-    - PottedPlantRandomPlastic
     chance: 0.95
     rarePrototypes:
     - MedicalBed
@@ -443,6 +439,10 @@
     - ComfyChair
     - ChairWood
     - ChairFolding
+    - ComputerBroken
+    - MachineFrameDestroyed
+    - VehicleJanicartDestroyed
+    - PottedPlantRandomPlastic
     rareChance: 0.1
     offset: 0.0
 
@@ -485,6 +485,9 @@
     - SuitStorageAtmos
     - SuitStorageSalv
     chance: 0.95
+    rarePrototypes:
+    - SuitStorageBase
+    rareChance: 0.05
     offset: 0.0
 
 - type: entity
