--- a/Resources/Prototypes/_NF/Entities/World/Debris/wrecks.yml
+++ b/Resources/Prototypes/_NF/Entities/World/Debris/wrecks.yml
@@ -25,6 +25,8 @@
           prob: 0.2
         - id: AirlockMaint
           prob: 0.01
+        - id: Barricade
+          prob: 0.01
         # Floor loot
         - id: SalvageSpawnerScrapCommon
           prob: 3.5
@@ -32,15 +34,17 @@
           prob: 0.3
         - id: SpawnDungeonLootSeed
           prob: 0.1
-        - id: SpawnDungeonLootBureaucracy
-          prob: 0.05
-        - id: SpawnDungeonLootToolsHydroponics
-          prob: 0.05
         - id: SalvageSpawnerTreasureValuable
           prob: 0.05
         - id: SalvageSpawnerEquipment
           prob: 0.05
         - id: SalvageSpawnerEquipmentValuable
+          prob: 0.03
+        - id: SpawnDungeonClutterMedsSingle
+          prob: 0.03
+        - id: SpawnDungeonLootBureaucracy
+          prob: 0.03
+        - id: SpawnDungeonLootToolsHydroponics
           prob: 0.03
         # Machine upgrades
         - id: SalvagePartsT2Spawner
