--- a/Resources/Prototypes/_NF/Catalog/Cargo/cargo_medical.yml
+++ b/Resources/Prototypes/_NF/Catalog/Cargo/cargo_medical.yml
@@ -32,7 +32,7 @@
 
 - type: cargoProduct
   id: CargoBarrelFluorine
-  abstract: true
+#  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
@@ -54,7 +54,7 @@
 
 - type: cargoProduct
   id: CargoBarrelAluminium
-  abstract: true
+#  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
@@ -65,7 +65,7 @@
 
 - type: cargoProduct
   id: CargoBarrelPhosphorus
-  abstract: true
+#  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
@@ -109,7 +109,7 @@
 
 - type: cargoProduct
   id: CargoBarrelLithium
-  abstract: true
+#  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
@@ -142,7 +142,7 @@
 
 - type: cargoProduct
   id: CargoBarrelRadium
-  abstract: true
+#  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
@@ -164,7 +164,7 @@
 
 - type: cargoProduct
   id: CargoBarrelCopper
-  abstract: true
+#  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
@@ -186,7 +186,7 @@
 
 - type: cargoProduct
   id: CargoBarrelMercury
-  abstract: true
+#  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
@@ -208,7 +208,7 @@
 
 - type: cargoProduct
   id: CargoBarrelEthanol
-  abstract: true
+#  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
@@ -230,7 +230,7 @@
 
 - type: cargoProduct
   id: CargoBarrelNitrogen
-  abstract: true
+#  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
