--- a/Resources/Prototypes/_NF/Entities/Structures/Storage/Crates/barrel.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Storage/Crates/barrel.yml
@@ -66,7 +66,7 @@
   - type: SolutionContainerManager
     solutions:
       tank:
-        maxVol: 500
+        maxVol: 1000
   - type: ExaminableSolution
     solution: tank
   - type: UserInterface
@@ -103,30 +103,10 @@
     damageModifierSet: Metallic
 
 - type: entity
-  parent: BaseBarrel
-  id: WoodenKeg
-  name: wooden keg
-  description: A musty old wooden keg, with a tap attached to the front.
-  components:
-  - type: Sprite
-    sprite: _NF/Objects/Storage/keg.rsi
-    layers:
-    - state: base
-      map: ["enum.StorageVisualLayers.Base"]
-  - type: Damageable
-    damageContainer: StructuralInorganic
-    damageModifierSet: Wood
-  - type: Construction
-    graph: WoodenKeg
-    node: woodenkeg
-    containers:
-    - entity_storage
-
-- type: entity
   id: MetalBarrelGrey
   name: metal barrel
   parent: BaseBarrel
-  description: A metal keg. It can be filled with liquid.
+  description: A metal barrel. It can be filled with liquid.
   components:
   - type: Sprite
     layers:
@@ -569,49 +549,4 @@
       tank:
         reagents:
           - ReagentId: Oxygen
-            Quantity: 500
-
-- type: entity
-  parent: WoodenKeg
-  name: root beer keg
-  description: A musty old wooden keg, with a tap attached to the front. Smells like root beer.
-  id: WoodenKegRootBeer
-  components:
-  - type: Label
-    currentLabel: reagent-name-root-beer
-  - type: SolutionContainerManager
-    solutions:
-      tank:
-        reagents:
-          - ReagentId: RootBeer
-            Quantity: 500
-
-- type: entity
-  parent: WoodenKeg
-  name: beer keg
-  description: A musty old wooden keg, with a tap attached to the front. Smells like beer.
-  id: WoodenKegBeer
-  components:
-  - type: Label
-    currentLabel: reagent-name-beer
-  - type: SolutionContainerManager
-    solutions:
-      tank:
-        reagents:
-          - ReagentId: Beer
-            Quantity: 500
-
-- type: entity
-  parent: WoodenKeg
-  name: wine keg
-  description: A musty old wooden keg, with a tap attached to the front. Smells like wine.
-  id: WoodenKegWine
-  components:
-  - type: Label
-    currentLabel: reagent-name-wine
-  - type: SolutionContainerManager
-    solutions:
-      tank:
-        reagents:
-          - ReagentId: Wine
             Quantity: 500
