--- a/Resources/Prototypes/_NF/Entities/Clothing/Shoes/boots.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Shoes/boots.yml
@@ -11,7 +11,7 @@
   - type: Matchbox
 
 - type: entity
-  parent: ClothingShoesBootsJack
+  parent: ClothingShoesBootsCombat
   id: ClothingShoesBootsNfsdBrown
   name: nfsd brown boots
   description: Stylish boots for running in circles on a deck during emergencies.
@@ -22,7 +22,7 @@
     sprite: _NF/Clothing/Shoes/Boots/nfsd_brown_boots.rsi
 
 - type: entity
-  parent: ClothingShoesBootsJack
+  parent: ClothingShoesBootsCombat
   id: ClothingShoesBootsNfsdCream
   name: nfsd cream boots
   description: Stylish boots for running in circles on a deck during emergencies.
