Make all military boots have the reduction

--- a/Resources/Prototypes/Entities/Clothing/Shoes/base_clothingshoes.yml
+++ b/Resources/Prototypes/Entities/Clothing/Shoes/base_clothingshoes.yml
@@ -51,6 +51,10 @@
           tags:
           - Knife
           - Sidearm
+  # Begin Frontier modifications - Added reduction of injured slowness to military boots.
+  - type: ClothingSlowOnDamageModifier
+    modifier: 0.5
+  # End Frontier modifications
 
 - type: entity
   abstract: true
