--- a/Resources/Prototypes/Entities/Clothing/Shoes/boots.yml
+++ b/Resources/Prototypes/Entities/Clothing/Shoes/boots.yml
@@ -20,8 +20,10 @@
     sprite: Clothing/Shoes/Boots/jackboots.rsi
   - type: Clothing
     sprite: Clothing/Shoes/Boots/jackboots.rsi
-  - type: ClothingSlowOnDamageModifier
-    modifier: 0.5
+  # Begin Frontier modifications - Moved to ClothingShoesMilitaryBase at base_clothingshoes.yml
+  #- type: ClothingSlowOnDamageModifier
+  #  modifier: 0.5
+  # End Frontier modifications
 
 - type: entity
   parent: ClothingShoesBaseButcherable
