--- a/Resources/Prototypes/_NF/Reagents/Consumables/Drink/drinks.yml
+++ b/Resources/Prototypes/_NF/Reagents/Consumables/Drink/drinks.yml
@@ -198,3 +198,18 @@
   metamorphicSprite:
     sprite: _NF/Objects/Consumable/Drinks/honeyicedtea.rsi
     state: icon
+
+- type: reagent
+  id: Eggnog
+  name: reagent-name-eggnog
+  parent: BaseAlcohol
+  desc: reagent-desc-eggnog
+  physicalDesc: reagent-physical-desc-thick
+  flavor: creamy
+  color: "#ffebc4"
+  metamorphicSprite:
+    sprite: _NF/Objects/Consumable/Drinks/eggnog.rsi
+    state: icon_empty
+  metamorphicMaxFillLevels: 8
+  metamorphicFillBaseName: fill
+  metamorphicChangeColor: true
