--- a/Resources/Prototypes/_NF/Recipes/Reactions/drinks.yml
+++ b/Resources/Prototypes/_NF/Recipes/Reactions/drinks.yml
@@ -100,3 +100,19 @@
       amount: 1
   products:
     HoneyIcedTea: 2
+
+- type: reaction
+  id: Eggnog
+  requiredMixerCategories:
+  - Shake # close enough to meringue?
+  reactants:
+    Sugar:
+      amount: 1
+    Cream:
+      amount: 1
+    Egg:
+      amount: 1
+    Rum:
+      amount: 1
+  products:
+    Eggnog: 4
