Couple component tweaks, switch from vanilla to new version for spawners, crates. Add migration line.

--- a/Resources/Prototypes/Entities/Markers/Spawners/vehicles.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/vehicles.yml
@@ -24,7 +24,7 @@
         state: keys
   - type: ConditionalSpawner
     prototypes:
-      - VehicleJanicart
+      - VehicleJanicartNF # Frontier
 
 - type: entity
   name: ATV Spawner
