--- a/Resources/Prototypes/_NF/Catalog/Cargo/cargo_medical.yml
+++ b/Resources/Prototypes/_NF/Catalog/Cargo/cargo_medical.yml
@@ -10,242 +10,264 @@
 
 - type: cargoProduct
   id: CargoBarrelCarbon
+  name: carbon metal barrel
   abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelCarbon
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelIodine
+  name: iodine metal barrel
   abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelIodine
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelFluorine
+  name: fluorine metal barrel
 #  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelFluorine
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelChlorine
+  name: chlorine metal barrel
   abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelChlorine
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelAluminium
+  name: aluminium metal barrel
 #  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelAluminium
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelPhosphorus
+  name: phosphorus metal barrel
 #  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelPhosphorus
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelSulfur
+  name: sulfur metal barrel
   abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelSulfur
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelSilicon
+  name: silicon metal barrel
   abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelSilicon
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelHydrogen
+  name: hydrogen metal barrel
   abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelHydrogen
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelLithium
+  name: lithium metal barrel
 #  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelLithium
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelSodium
+  name: sodium metal barrel
   abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelSodium
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelPotassium
+  name: potassium metal barrel
   abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelPotassium
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelRadium
+  name: radium metal barrel
 #  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelRadium
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelIron
+  name: iron metal barrel
   abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelIron
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelCopper
+  name: copper metal barrel
 #  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelCopper
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelGold
+  name: gold metal barrel
   abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelGold
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelMercury
+  name: mercury metal barrel
 #  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelMercury
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelSilver
+  name: silver metal barrel
   abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelSilver
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelEthanol
+  name: ethanol metal barrel
 #  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelEthanol
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelSugar
+  name: sugar metal barrel
   abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelSugar
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelNitrogen
+  name: nitrogen metal barrel
 #  abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelNitrogen
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
 
 - type: cargoProduct
   id: CargoBarrelOxygen
+  name: oxygen metal barrel
   abstract: true
   icon:
     sprite: _NF/Objects/Storage/barrel.rsi
     state: metal_grey
   product: ChemicalBarrelOxygen
-  cost: 1000
+  cost: 500
   category: cargoproduct-category-name-medical
   group: market
