Should add the ability to make items named grilled cheeses

--- a/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
@@ -2286,3 +2286,24 @@
     ShardGlass: 1
   recipeType: Oven # Frontier
 
+- type: microwaveMealRecipe
+  id: RecipeGrillCheese
+  name: grilled cheese recipe
+  result: FoodBakedGrilledCheese
+  time: 10
+  solids:
+    FoodBreadPlainSlice: 2
+    FoodCheeseSlice: 1
+  recipeType:
+  - Oven
+
+- type: microwaveMealRecipe
+  id: RecipeGoatGrillCheese
+  name: goat grilled cheese recipe
+  result: FoodBakedGoatGrilledCheese
+  time: 10
+  solids:
+    FoodBreadPlainSlice: 2
+    FoodChevreSlice: 1
+  recipeType:
+  - Oven
