Less off-white eggnog (eugh), glass reflections

--- a/Resources/Prototypes/_NF/Reagents/Consumables/Drink/drinks.yml
+++ b/Resources/Prototypes/_NF/Reagents/Consumables/Drink/drinks.yml
@@ -212,4 +212,4 @@
     state: icon_empty
   metamorphicMaxFillLevels: 8
   metamorphicFillBaseName: fill
-  metamorphicChangeColor: true
+  metamorphicChangeColor: false
