--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/pets.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/pets.yml
@@ -312,7 +312,7 @@
   id: ActionEldritchPush
   categories: [ HideSpawnMenu ]
   name: "[color=yellow]Force Push[/color]"
-  description: "Summon forth an eldritch hand. [color=yellow]3 minutes cooldown.[/color]"
+  description: "Summon forth an eldritch hand. [color=yellow]5 minute cooldown.[/color]"
   components:
   - type: WorldTargetAction
     icon: { sprite : _NF/Effects/bloodcultprojectiles.rsi, state: hand }
