--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/pets.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/pets.yml
@@ -227,7 +227,7 @@
   name: blood cult cat
   parent: [NFMobPet, MobCatGhost]
   id: MobCatBloodCult
-  description: Founded the Blood Cult out of boredoom.
+  description: Founded the Blood Cult out of boredom.
   components:
   - type: Body
     prototype: Bloodsucker
