--- a/Resources/Prototypes/_NF/Entities/Mobs/NPCs/pets.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/NPCs/pets.yml
@@ -291,7 +291,7 @@
 - type: entity
   id: EldritchPushGun
   name: eldritch hand gun
-  description: Shoots eldritch hand.
+  description: Shoots an eldritch hand.
   categories: [ HideSpawnMenu ]
   components:
   - type: RechargeBasicEntityAmmo
