--- a/Resources/Prototypes/_NF/Datasets/Names/cat_cult.yml
+++ b/Resources/Prototypes/_NF/Datasets/Names/cat_cult.yml
@@ -1,4 +1,4 @@
-- type: dataset # Names of town that held witch trials
+- type: dataset # Mostly names of towns that held witch trials
   id: names_cat_cult
   values:
   - Salem
@@ -10,3 +10,16 @@
   - Würzburg
   - Bamberg
   - Torsåker
+  - Glamis
+  - Danube
+  - Montpezat
+  - Nördlingen
+  - Kirkwall
+  - Denbigh
+  - Tyburn
+  - Bamberg
+  - Beaumaris
+  - Braunschweig
+  - Carrickfergus
+  - Soulmother
+  - Leatherlips
