--- a/Resources/Prototypes/_NF/Catalog/Fills/Crates/salvage.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Crates/salvage.yml
@@ -9,13 +9,17 @@
       entity_storage: !type:NestedSelector
         tableId: NFSalvageAssortedGoodies
         rolls: !type:RangeNumberSelector
-          range: 0, 3
+          range: -1, 3 # -1 used because of strange counting, actual values: [0, 1, 2, 3], ~25% chance of each.
 
 - type: entityTable
   id: NFSalvageAssortedGoodies
   table: !type:GroupSelector
     children:
     # Mats
+    - id: SheetSteel
+      weight: 0.15
+    - id: SheetGlass
+      weight: 0.15
     - id: SheetPlasma
       weight: 0.1
     - id: IngotGold
