--- a/Resources/Prototypes/_NF/Datasets/Names/cat_cult.yml
+++ b/Resources/Prototypes/_NF/Datasets/Names/cat_cult.yml
@@ -1,6 +1,7 @@
 - type: dataset # Mostly names of towns that held witch trials
   id: names_cat_cult
   values:
+  # Towns
   - Salem
   - Valais
   - Trier
@@ -10,7 +11,6 @@
   - Würzburg
   - Bamberg
   - Torsåker
-  - Glamis
   - Danube
   - Montpezat
   - Nördlingen
@@ -21,5 +21,16 @@
   - Beaumaris
   - Braunschweig
   - Carrickfergus
+  - Belvoir
+  # Witches
+  - Glamis
   - Soulmother
   - Leatherlips
+  - Kolgrim
+  - Dacal
+  - Koldings
+  - Balfour
+  - Burroughs
+  - Wardwell
+  - Guilladot
+  - Saenger von Mossau
